web/app/themes/vestedworld/assets/styles/pages/_home.scss
// Home page

.home.page {

  .icon-target, .icon-connect, .icon-invest {
    height: 100px; width: 100px;
  }

  // Slider
  .slick-slider {
    margin: 0;
  }
  .slick-dots {
    margin: 0;
    padding: 0;
    bottom: 40px;
    left: #{$mobile-column-width * 1};
    width: 200px;
    text-align: left;
    @include media-md {
      bottom: 40px;
      left: #{$column-width * 1};
    }
    li {
      display: inline-block;
      button::before {
        content: '';
        border-radius: 50%;
        display: block;
        height: 8px;
        width: 8px;
        border: 1px solid $white;
        opacity: 1;
      }
      &.slick-active button::before {
        background: $white;
      }
    }
  }
  .slide-item {
    position: relative;
    h3.tab {
      background: $white;
      color: $blue;
    }
    img {
      width: 100%;
    }
    .slide-text {
      @include column(12);
      padding: #{$vertical-beat * 4} $mobile-global-padding #{$vertical-beat * 6};

      background: rgba($blue,1);
      color: $white;
      p.headline {
        margin: 0 0 40px 0;
      }
      .learn-more-wrap {
        text-align: right;
      }
      @include media-md {
        position: absolute;
        left: 0;
        bottom: 0;
        background: rgba($blue,.85);
        padding: #{$vertical-beat * 6} $global-padding $global-padding;
        p.headline {
          font: 48px/48px $sans;
          margin: -6px 0 64px 0;
        }
      }
    }
  }

  .row {
    background: $blue-dark;
    @include media-md {
      margin-bottom: #{$vertical-beat * 8};
    }
  }

  // What We Do block
  .what-we-do {
    background: $gray-lite;
    @include column(12);
    article {
      margin: 0 $mobile-global-padding;
      padding: #{$vertical-beat * 6} 0 #{$vertical-beat * 6} 0;
      border-top: 1px solid $gray-dark;
      position: relative;
      h2 {
        color: $blue;
      }
      &:first-of-type {
        margin-top: 0;
        border-top: none;
      }
      img {
        opacity: 0;
        position: absolute;
        top: 20px;
        right: 0;
        width: 64px;
        transition: opacity .5s ease-out;
        &.in-view {
          opacity: 1;
        }
      }
    }

    @include media-md {
      padding: #{$vertical-beat * 6} 0 0 0;
      &::before {
        left: 0;
        content: '';
        width: 31px;
        height: 1px;
        bottom: 0;
        position: absolute;
        background: $gray-dark;
      }
      article {
        margin-right: 0;
        border-top: none;
        margin-left: $global-padding;
        border-bottom: 1px solid $gray-dark;
        padding: #{$vertical-beat * 6} #{$column-width * 1 * $num_columns/10} #{$vertical-beat * 8} #{$column-width * 2 * $num_columns/10};
        &:first-of-type {
          border-top: 1px solid $gray-dark;
        }
        img {
          top: 64px;
          right: auto;
          left: 0;
          width: #{$column-width * 1.5 * $num_columns/10};
        }
      }
    }
  }
  // Wrapper for Join & Featured slider
  .home-features {
    @include column(11);
  }
  .join {
    display: none;
    position: relative;
    background: $blue;
    color: $white;
    padding: #{$vertical-beat * 6} $mobile-global-padding #{$vertical-beat * 8};
    @include media-md {
      display: block;
      padding: #{$vertical-beat * 6} $global-padding #{$vertical-beat * 8};
    }
    &.-mobile {
      color: $gray-dark;
      display: block;
      background: $white;
      .newsletter {
        border-color: $gray-dark;
        input[type=email] {
          color: $gray-dark;
          &::placeholder {
            color: $gray-dark;
          }
        }
        button.submit {
          color: $white;
          background: $gray-dark;
        }
      }
      @include media-md {
        display: none;
      }
    }
    .sign-up-button {
      margin: #{$vertical-beat * 4} 0 0;
      height: 48px;
      width: 100%;
      z-index: 1;
      display: block;
      padding: 0 30px;
      text-decoration: none;
      font: 16px/46px $sans;
      color: $brand-primary;
      border: 1px solid $brand-primary;
      position: relative;
      transition: background .2s ease-out, color .2s ease-out;
      &::after {
        position: absolute;
        right: 0;
        top: 0;
        width: #{$mobile-column-width * 2};
        font-size: 16px;
        background: $brand-primary;
        color: $white;
        content: '>';
        text-align: center;
        line-height: 46px;
        height: 46px;
        border: none;
        transition: width .2s ease-out, padding .2s ease-out;
        @include media-md {
          height: 78px;
          line-height: 78px;
          text-align: right;
          background: $white;
          color: $brand-primary;
          padding: 0 #{$mobile-column-width - 3} 0 0;
          width: #{$column-width * 1 * $num_columns/9};
        }
      }
      @include media-md {
        height: 80px;
        color: $white;
        font: 32px/78px $sans;
        border-color: $white;
        margin: #{$vertical-beat * 8} 0 0;
        &:hover {
          color: $brand-primary;
          &::after {
            z-index: -1;
            width: 100%;
            padding-right: #{$mobile-column-width - 4}; 
          }
        }
      }
    }
  }
  .newsletter {
    margin: #{$vertical-beat * 4} 0 0;
    height: 48px;
    width: 100%;
    border: 1px solid $white;
    position: relative;
    @include media-md {
      height: 80px;
      margin: #{$vertical-beat * 8} 0 0;
    }
    input[type=email] {
      background: none;
      border: none;
      font: 16px/46px $sans;
      padding: 0 30px;
      color: $white;
      outline: none;
      &::placeholder {
        color: $white;
      }
      @include media-md {
        font: 32px/78px $sans;
      }
    }
    button.submit {
      position: absolute;
      right: 0;
      top: 0;
      width: #{$mobile-column-width * 2};
      padding: 0;
      background: $white;
      color: $blue;
      text-align: center;
      line-height: 46px;
      height: 46px;
      border: none;
      @include media-md {
        height: 78px;
        width: #{$column-width * 1 * $num_columns/9};
      }
    }
  }

  .featured {
    color: $white;
    background: $blue-dark;
    position: relative;
    padding: $mobile-global-padding;
    h3 {
      margin-bottom: 0;
    }
    .learn-more-wrap {
      margin-top: #{$vertical-beat * 12};
      text-align: right;
    }
    @include media-md {
      min-height: 480px;
      padding: $global-padding;
    }

    .slick-dots {
      left: 0;
      margin: 0;
      bottom: 0;
      padding: 0;
      width: 200px;
      text-align: left;
      @include media-md {
        bottom: -60px;
      }
    }
  }

}

